# ti_mmwave_rospkg

./: CMakeLists.txt  README.md  package.xml
auxiliary/: tuning_insights.md
cfg/1843AOP/: 1843AOP_velocity_10fps.cfg  r10m_rr6.5cm_v8.3ms_vr26cms__ok.cfg  r15m_rr4.7cm_v6.7ms_vr43cms__nope.cfg  short_range_30fps.cfg
cfg/viz/: cam_radar.perspective  rviz.rviz  std.rviz
include/ti_mmwave_rospkg/: DataHandlerClass.h  ParameterParser.h  altitude_node.h  mmWave.h  mmWaveCommSrv.h  mmWaveDataHdl.h  point_types.h
launch/: ti_radar.launch
launch/1843/: 1843_long_range.launch  1843_medium_range.launch  1843_short_range.launch
launch/1843AOP/: 1843AOP_long_range.launch  1843AOP_medium_range.launch  1843AOP_short_range.launch  1843AOP_short_range_demo.launch
launch/6843AOP/: 6843AOP_short_range_demo.launch
launch/multi/: cam_and_radar.launch  tripple_sensor.launch
launch/rviz/: ti_mmwave_demo_short_range.rviz
scripts/: cumulative_pointclouds.ipynb
scripts/.ipynb_checkpoints/: cumulative_pointclouds-checkpoint.ipynb
src/: DataHandlerClass.cpp  ParameterParser.cpp  altitude_node.cpp  mmWaveCommSrv.cpp  mmWaveDataHdl.cpp  mmWaveLoader.cpp  mmWaveQuickConfig.cpp
