<?xml version="1.0"?>
<package>
  <name>ti_mmwave_rospkg</name>
  <version>3.3.0</version>
  <description>The ti_mmwave_rospkg package. (TI > Leo Zhang > ASL)</description>
  <maintainer email="dr.leo.zhang@outlook.com">Leo Zhang</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/radar-lab/ti_mmwave_rospkg</url> -->
  <author email="dr.leo.zhang@outlook.com">Leo Zhang</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roslint</build_depend>
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!-- <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/mmWave_nodelets.xml" />
  </export>
  
</package>
